<resources>
    <string name="app_name">ETAS</string>
    <string name="user">Введите логин</string>
    <string name="password">Введите пароль</string>
    <string name="join_btn">Войти</string>
    <string name="reg_btn">Регистрация</string>
    <string name="user_no_input">Введите данные</string>
    <string name="dup_password">Повторите пароль</string>
    <string name="finish_test">Завершить тест</string>
    <string name="words">Словарь</string>
    <string name="tests">Тесты</string>
    <string name="view_text">Вид теста</string>
    <string name="count_words">Количество слов</string>
    <string name="max">max:</string>
    <string name="begin">Начать</string>
    <string name="settings">Параметры</string>
    <string name="translated">Переводчик</string>
    <string name="translate">Перевод</string>
    <string name="option_1">Вариант 1</string>
    <string name="option_2">Вариант 2</string>
    <string name="option_3">Вариант 3</string>
    <string name="option_4">Вариант 4</string>
    <string name="RU">RU</string>
    <string name="EN">EN</string>
    <string name="delete_word">Удалить слово</string>
    <string name="current_dictionary">Текущий словарь:</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btn_translated">Перевод</string>
    <string name="input_word">Введите слово</string>
    <string name="menu_home">Home</string>
    <string name="name">Название</string>
    <string name="dark_topic">Темная тема</string>
    <string name="view_words">Текущий словарь: </string>
    <string name="choice">Выбрать</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create">Создать</string>
    <string name="delete">Удалить</string>
    <string name="language">Язык</string>
    <string name="save">Сохранить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="tests_names">
        <item>Выбор ответа</item>
        <item>Ручной ввод</item>
    </string-array>
    <string-array name="languages">
        <item>RU</item>
        <item>EN</item>
    </string-array>
    <string-array name="tests_languages">
        <item>RU-EN</item>
        <item>EN-RU</item>
    </string-array>

</resources>