<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_words">

    <fragment
        android:id="@+id/nav_words"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/words"
        tools:layout="@layout/fragment_words" />

    <fragment
        android:id="@+id/nav_tests"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/tests"
        tools:layout="@layout/fragment_tests" />

    <fragment
        android:id="@+id/nav_translated"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/translated"
        tools:layout="@layout/fragment_translated" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.myapplication.BlankFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>