<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.words.WordsFragment">

    <TextView
        android:id="@+id/current_dict_tw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options_layout"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="5dp"
        android:text="@string/current_dictionary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_delete_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_words"
        android:layout_marginStart="38dp"
        android:text="@string/delete_word"
        android:backgroundTint="@color/btn"
        android:layout_marginTop="-100dp"/>

    <LinearLayout
        android:id="@+id/options_layout"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="38dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_choice">

        <EditText
            android:id="@+id/et_dictionaryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="@color/btn"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_below="@+id/dictioinaries_spinner"
        android:layout_marginStart="38dp"
        android:backgroundTint="@color/btn"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:text="@string/delete"
        android:layout_below="@+id/dictioinaries_spinner"
        android:layout_toEndOf="@+id/btn_choice"
        android:backgroundTint="@color/btn"/>

    <Button
        android:id="@+id/btn_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:text="@string/choice"
        android:layout_below="@+id/dictioinaries_spinner"
        android:layout_toEndOf="@+id/btn_create"
        android:backgroundTint="@color/btn"/>

    <Spinner
        android:id="@+id/dictioinaries_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/words"
        android:minHeight="48dp"
        android:textAlignment="textStart" />

    <ScrollView
        android:id="@+id/view_words"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/current_dict_tw"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="100dp">

        <LinearLayout
            android:id="@+id/words_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>




</RelativeLayout>