<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/menu">

    <TextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:background="@color/menu"
        android:fontFamily="@font/andika_new_basic_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textColor="@color/btn"/>

    <Button
        android:id="@+id/join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_password"
        android:layout_marginHorizontal="100sp"
        android:layout_marginTop="25sp"
        android:backgroundTint="@color/btn"
        android:text="@string/join_btn"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/join"
        android:layout_marginHorizontal="100sp"
        android:layout_marginTop="25sp"
        android:backgroundTint="@color/btn"
        android:text="@string/reg_btn"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hello"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="50sp"
        android:autofillHints=""
        android:background="@color/btn"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="25sp"
        android:autofillHints=""
        android:background="@color/btn"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/black" />
</RelativeLayout>