<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tests.TestsFragment">

    <ViewFlipper
        android:id="@+id/testsFlipper"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="@drawable/tests_start_divider">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <Spinner
                android:id="@+id/tests_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/view_text"
                android:textAlignment="textStart"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/languages_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Язык"
                android:textAlignment="textStart"
                android:entries="@array/tests_languages"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:text="@string/count_words" />

                <EditText
                    android:id="@+id/wordsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="2"
                    android:hint="@string/max"
                    android:height="48dp"
                    android:inputType="number" />

            </LinearLayout>

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/begin"
                android:backgroundTint="@color/btn"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ft_words_rest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Слов осталось: " />

            <TextView
                android:id="@+id/ft_word_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:width="300dp"
                android:height="60dp"
                android:layout_marginTop="5dp" />

            <Button
                android:id="@+id/variant1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_1"
                android:backgroundTint="@color/btn"/>

            <Button
                android:id="@+id/variant2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_2"
                android:backgroundTint="@color/btn"/>

            <Button
                android:id="@+id/variant3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_3"
                android:backgroundTint="@color/btn"/>

            <Button
                android:id="@+id/variant4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_4"
                android:backgroundTint="@color/btn"/>

            <Button
                android:id="@+id/test_finish_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish_test"
                android:backgroundTint="@color/btn"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/st_words_rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Слов осталось:" />

            <TextView
                android:id="@+id/st_word_field"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/st_input_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/translate" />

                <Button
                    android:id="@+id/st_submit_button"
                    android:layout_width="wrap_content"
                    android:minWidth="5dp"
                    android:backgroundTint="@color/btn"
                    android:layout_height="match_parent"
                    android:drawableBottom="@drawable/ic_baseline_keyboard_arrow_right_24"/>

            </LinearLayout>

            <Button
                android:id="@+id/st_finish_button"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/finish_test" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Test finished!"
                android:textSize="20dp"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/test_correct_answers_tw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Correct answers: 10/20"
                    android:textSize="15dp" />

            </LinearLayout>

            <Button
                android:id="@+id/test_exit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Выйти"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/btn" />

        </LinearLayout>



    </ViewFlipper>

</RelativeLayout>